--- a/example_neriak.ini
+++ b/example_neriak.ini
@@ -15,15 +15,7 @@ accept_commands_from=
 ; used to determine whether we are in combat
 group_members=
 
-; Default key bindings for all personas. 
+; Default trigger for the "press this key command"
 ; Supports key combinations separated by a plus sign, e.g. shift+1 or ctrl+alt+5
 ;
-[ACTIONS]
-; Accept group invite
-accept_group=
-; Follow
-follow_on=
-; Stop following
-follow_off=s
-; Assist
-assist_on=
+press_key_trigger=
